1.6.6: ?
 * Luminotes Desktop now attempts to always run on a particular port number,
   which means that as long as it's running you can reach it from a constant
   URL.
 * Luminotes now recognizes "mailto:" links as external links, so you can
   include links to email addresses within your notes.

1.6.5: February 12, 2009
 * Now ignoring even more unneeded HTML tags from an MS Word copy-and-paste.
 * Fixed a bug in Internet Explorer in which hiding a focused note could cause
   the next note to display incorrectly.
 * Fixed a bug in Internet Explorer in which opening a note by following a link
   didn't display the opened note correctly.
 * Fixed a bug in which a drag-and-dropped note occasionally didn't resize back
   to its original size.
 * Re-fixed a bug in which hiding a focused note could (temporarily) leave an
   empty gap at the bottom of the page. 

1.6.4: February 12, 2009
 * Now ignoring certain unneeded HTML tags that end up in your notes when you
   copy and paste text from an MS Word document.
 * Fixed a bug in which clicking on the title field within a link pulldown did
   not position the text cursor there.
 * Fixed a bug in which clicking on an unfocused note didn't position the text
   cursor in the correct location.
 * Fixed bugs related to the display and hiding of previous note revisions.
 * Fixed a bug in which moving a note and then clicking the "changes" tab on
   any other note failed to show that note's previous revisions.
 * Fixed a bug in which hiding a note could produce a spurious save conflict
   notification error.

1.6.3: February 11, 2009
 * Introduced cache-busting code to make pages update more reliably after a
   new release.
 * Added initial (untested) support for Internet Explorer 8 beta.

1.6.2: February 11, 2009
 * Added drag-and-drop note reordering.
 * Fixed a visual bug in which a second title within a note had insufficient
   vertical spacing above it.

1.6.1: January 29, 2009