@@ -19,7 +19,8 @@ class Header( Div ):
             u"version", VERSION, u" | ",
             A( u"upgrade", href = u"http://luminotes.com/download?upgrade=True", target = "_new" ), u" | ",
             A( u"community", href = u"http://luminotes.com/community", target = "_new" ), u" | ",
-            A( u"blog", href = u"http://luminotes.com/blog/", target = "_new" ),
+            A( u"blog", href = u"http://luminotes.com/blog/", target = "_new" ), u" | ",
+            A( u"close", href = u"/close" ),
             class_ = u"header_links",
           ),
           class_ = u"wide_center_area",
